Fix list alignment and disappearing calendar icon

--- a/source/css/scss/patterns/01-atoms/_calendar-icon.scss
+++ b/source/css/scss/patterns/01-atoms/_calendar-icon.scss
@@ -6,7 +6,6 @@
   margin-right: 16px;
   margin-bottom: 13px;
   margin-top: 3px;
-  display: none;
   @include breakpoint($display_medium_min) {
     display: block;
   }
